--- a/er.1
+++ b/er.1
@@ -128,6 +128,8 @@ Move cursor to last character in the buffer.
 Print information about the current cursor position.
 .IP t
 Toggle using tabs (\\t) or 4 spaces for indentation.
+.IP A
+Toggle automatic indentation.
 .IP s
 Search for the given (extended) regular expression.
 Input of the regular expression is at the bottom of the
