feature: scroll display with ^D and ^U
fixes: newline at end of display will no longer move cursor off screen

--- a/er.1
+++ b/er.1
@@ -72,6 +72,10 @@ Move cursor to end of line.
 Move cursor backward by one screen's worth of text.
 .IP "CTRL+f, PAGEDOWN"
 Move cursor forward by one screen's worth of text.
+.IP "CTRL+d"
+Scroll the display down by half a screen's worth of text.
+.IP "CTRL+u"
+Scroll the display up by half a screen's worth of text.
 .RE
 .SS "COMMAND and SELECT modes"
 Almost all commands are immediately executed, however
